// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmark Page should bookmark page match snapshot, based on current user : { View: [Object] } 1`] = `
<div
  class="index-anime"
>
  <div
    class="display-2 mb-4"
  >
    Bookmarked Anime
  </div>
  <v-layout-stub
    class="scroll_container"
    tag="div"
    wrap="wrap"
  >
    <animecard-stub
      anime="[object Object]"
    />
    <!---->
  </v-layout-stub>
</div>
`;

exports[`Bookmark Page should bookmark page match snapshot, based on current user : null 1`] = `
<div
  class="index-anime"
>
  <div
    class="display-2 mb-4"
  >
    Bookmarked Anime
  </div>
  <v-layout-stub
    class="scroll_container"
    tag="div"
    wrap="wrap"
  >
    <div>
      <div
        class="title-1 mb-2"
      >
        You don't have any bookmarked Anime yet
      </div>
      <div
        class="subtitle-1"
      >
        Check out
        <span>
           
          <a>
            Anime List !
          </a>
        </span>
      </div>
    </div>
    <!---->
  </v-layout-stub>
</div>
`;
